--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="./node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-local-storage/0.5.0/angular-local-storage.js"></script>
+    <!-- <script src="./node_modules/angular-local-storage/dist/angular-local-storage.min.js"></script> -->
     <!-- <script src="bower_components/angular-xeditable/dist/js/xeditable.js"></script> -->
     <!-- <script src="lib/js/vendor.min.js"></script> -->
     <!-- <script src="lib/js/app.js"></script> -->
